tests/ui/opts/04_plain_crate_arg.stderr
error: expected `=`
 --> tests/ui/opts/04_plain_crate_arg.rs:4:10
  |
4 | #[funcmap(crate)]
  |          ^^^^^^^
